--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,6 @@ safetensors>=0.3.0
 pillow>=9.0.0
 numpy>=1.24.0
 requests>=2.28.0
-websocket-client>=1.6.0
-gradio>=4.0.0
 huggingface_hub>=0.16.0
 omegaconf>=2.3.0
 timm>=0.9.0
@@ -19,3 +17,8 @@ scipy>=1.10.0
 scikit-image>=0.21.0
 controlnet-aux>=0.0.6
 xformers>=0.0.20
+tqdm>=4.64.0
+psutil>=5.9.0
+aiohttp>=3.8.0
+websockets>=10.0
+pyyaml>=6.0
